# routes/api.php
@@ -7,26 +7,27 @@ use App\Http\Controllers\UndanganController;
 use Illuminate\Support\Facades\Route;
 use Illuminate\Http\Request;
 
+// AUTH
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
-
 Route::middleware('auth:sanctum')->post('/logout', [AuthController::class, 'logout']);
 
+
+// TEMPLATES
 Route::middleware(['auth:sanctum'])->group(function () {
     Route::post('/templates', [TemplateController::class, 'store']);
+    Route::put('/templates/{id}', [TemplateController::class, 'update']);
 });
-
-
 Route::get('/templates', [TemplateController::class, 'index']);
 Route::get('/templates/{id}', [TemplateController::class, 'show']);
+Route::middleware('auth:sanctum')->get('/my-templates', [TemplateController::class, 'myTemplates']);
 
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
 
+// USER DATA
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/my-templates', [TemplateController::class, 'userTemplates']);
+    Route::post('save-template', [TemplateController::class, 'saveTemplate']);
     Route::get('/my-undangan', [UndanganController::class, 'userUndangan']);
     Route::post('/undangan', [UndanganController::class, 'store']);
 });
@@ -35,3 +36,8 @@ Route::middleware('auth:sanctum')->group(function () {
 Route::post('/admin/register', [AdminAuthController::class, 'register']);
 Route::post('/admin/login', [AdminAuthController::class, 'login']);
 Route::middleware('auth:sanctum')->post('/admin/logout', [AdminAuthController::class, 'logout']);
+
+
+Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+    return $request->user();
+});
